--- a/TradeSaber/wwwroot/index.html
+++ b/TradeSaber/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>Trade Saber</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/MudBlazor/MudBlazor.min.css" />
 </head>
 
 <body>
